# rune

./: .gitignore  .jjignore  Cargo.toml  LICENSE  README.md  README.old  README_EN.md  REBUILD_GUIDE.md  TESTING.md  go.mod  go.sum  main.go  rune.yaml
cmd/: plugin.go  run.go  script.go
cmd/plugin/: edit.go  install.go  list.go  new.go  remove.go
cmd/script/: edit.go  import.go  list.go  new.go  remove.go
examples/: bash.yaml  hello.py  hello.sh  python.yaml
plugin/: builtin.go  plugin.go  registry.go
plugin/plugins/: lua.lua
plugins/: README.md  bash.toml  deno.toml  lua.toml  node.toml  nushell.toml  perl.toml  php.toml  python-uv.toml  python.toml  ruby.toml  ruby.yaml  zsh.toml
plugins/yaml-examples/: bash.yaml  node.yaml  python-uv.yaml
src/: main.rs
src/commands/: mod.rs  plugin.rs  run.rs  script.rs
src/core/: executor.rs  mod.rs  plugin.rs  script.rs
src/utils/: cli.rs  fs.rs
test/: yaml.go
tests/: test_plugin.rs  test_script.rs
tests/common/: mod.rs
util/: cli.go  env.go  fs.go  types.go
