[package]
name = "rune"
version = "0.5.0"
edition = "2024"
authors = ["Yoikitsune"]
description = "Universal script runner"
license = "Apache-2.0"
repository = "https://github.com/yourusername/rune-rs"
keywords = ["script", "runner", "cli", "automation"]
categories = ["command-line-utilities", "development-tools"]


[dependencies]
anyhow = "1.0.100"
bincode = { version = "2.0.1", features = ["serde"] }
clap = { version = "4.5.50", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
tabled = "0.20.0"
which = "8.0.0"

[dev-dependencies]
tempfile = "3.14.0"
assert_fs = "1.1.2"
predicates = "3.1.2"
serial_test = "3.2.0"
